@@ -1,4 +1,0 @@
-DECL|function|QTextCodecPlugin
-DECL|function|create
-DECL|function|keys
-DECL|function|~QTextCodecPlugin
