@@ -56,7 +56,6 @@ DECL|macro|QT_NO_TABLEVIEW
 DECL|macro|QT_NO_TABLEWIDGET
 DECL|macro|QT_NO_TABWIDGET
 DECL|macro|QT_NO_TEXTCODEC
-DECL|macro|QT_NO_TEXTCODECPLUGIN
 DECL|macro|QT_NO_TOOLBAR
 DECL|macro|QT_NO_TOOLBOX
 DECL|macro|QT_NO_TOOLBUTTON
