@@ -146,7 +146,6 @@ DECL|macro|QT_NO_TABWIDGET
 DECL|macro|QT_NO_TEMPORARYFILE
 DECL|macro|QT_NO_TEXTBROWSER
 DECL|macro|QT_NO_TEXTCODEC
-DECL|macro|QT_NO_TEXTCODECPLUGIN
 DECL|macro|QT_NO_TEXTDATE
 DECL|macro|QT_NO_TEXTEDIT
 DECL|macro|QT_NO_TEXTHTMLPARSER
