@@ -88,7 +88,6 @@ DECL|macro|QT_NO_SYSTEMTRAYICON
 DECL|macro|QT_NO_TABLETEVENT
 DECL|macro|QT_NO_TEMPORARYFILE
 DECL|macro|QT_NO_TEXTCODEC
-DECL|macro|QT_NO_TEXTCODECPLUGIN
 DECL|macro|QT_NO_TEXTDATE
 DECL|macro|QT_NO_TRANSLATION
 DECL|macro|QT_NO_TRANSLATION_UTF8
