@@ -93,7 +93,6 @@ DECL|macro|QT_NO_TABLEVIEW
 DECL|macro|QT_NO_TABLEWIDGET
 DECL|macro|QT_NO_TABWIDGET
 DECL|macro|QT_NO_TEXTBROWSER
-DECL|macro|QT_NO_TEXTCODECPLUGIN
 DECL|macro|QT_NO_TEXTEDIT
 DECL|macro|QT_NO_TEXTODFWRITER
 DECL|macro|QT_NO_TOOLBAR
